policies/app/pod-qurantine-poilcy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-quarantine-policy
  namespace: app-namespace
spec:
  podSelector:
    matchLabels:
      quarantine: "true"
  ingress: []
  egress: []
  policyTypes:
    - Ingress
    - Egress
